--- a/templates/quiz/index.html.twig
+++ b/templates/quiz/index.html.twig
@@ -81,14 +81,14 @@
 							<p class="card-title">Difficulté :
 								{{ quiz.difficulte }}</p>
 							{# <div class="col-md-4 d-flex align-items-center justify-content-center">
-																																																																																				
-																																																																																												<a href="{{ path('app_question_index', {'idQuiz': quiz.idQuiz}) }}" class="btn btn-success custom-btn">Questions</a>
-																																																																																				
-																																																																																											</div> #}
+																																																																																																																
+																																																																																																																								<a href="{{ path('app_question_index', {'idQuiz': quiz.idQuiz}) }}" class="btn btn-success custom-btn">Questions</a>
+																																																																																																																
+																																																																																																																							</div> #}
 							<div class="d-flex justify-content-between">
 								<div class="col-12 mb-4 d-flex align-items-center ml-auto">
 									<i class="bi bi-question-circle" style="font-size: 25px; margin-right: 7px;"></i>
-									<a href="{{ path('app_question_index', {'idQuiz': quiz.idQuiz}) }}" class="btn btn-success custom-btn">Questions</a>
+									<a href="{{ path('quiz_show', {'idQuiz': quiz.getIdQuiz()}) }}" class="btn btn-success custom-btn">Questions</a>
 								</div>
 							</div>
 
