--- a/templates/DashbordAdmin.html.twig
+++ b/templates/DashbordAdmin.html.twig
@@ -1,250 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-	<head>
-		<meta charset="utf-8">
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-		<title>
-			{% block title %}
-				Elbaldi
-			{% endblock %}
-		</title>
-		<meta content="" name="description">
-		<meta
-		content="" name="keywords">
-
-		<!-- Favicons -->
-		<link href="{{asset('Back/img/elbaldi.jpg')}}" rel="icon">
-		<link
-		href="{{asset('Back/img/elbaldi.jpg ')}}" rel=">
-
-		<!-- Google Fonts -->
-		<link href="https://fonts.gstatic.com" rel="preconnect">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-		{% block css%}
-			<!-- Vendor CSS Files -->
-			<link href="{{asset('Back/vendor/bootstrap/css/bootstrap.min.css ')}}" rel="stylesheet">
-			<link href="{{asset('Back/vendor/bootstrap-icons/bootstrap-icons.css ')}}" rel="stylesheet">
-			<link href="{{asset('Back/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
-			<link href="{{asset('Back/vendor/quill/quill.snow.css ')}}" rel="stylesheet">
-			<link href="{{asset('Back/vendor/quill/quill.bubble.css ')}}" rel="stylesheet">
-			<link href="{{asset('Back/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
-			<link
-			href="{{asset('Back/vendor/simple-datatables/style.css')}}" rel="stylesheet">
-
-			<!-- Template Main CSS File -->
-			<link
-			href="{{asset('Back/css/style.css')}}" rel="stylesheet">
-
-		<!-- =======================================================
-																																																																																																																																																																																																																																																																																																																																																																																																				  * Template Name: NiceAdmin
-																																																																																																																																																																																																																																																																																																																																																																																																				  * Updated: Mar 09 2023 with Bootstrap v5.2.3
-																																																																																																																																																																																																																																																																																																																																																																																																				  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-																																																																																																																																																																																																																																																																																																																																																																																																				  * Author: BootstrapMade.com
-																																																																																																																																																																																																																																																																																																																																																																																																				  * License: https://bootstrapmade.com/license/
-																																																																																																																																																																																																																																																																																																																																																																																																				  ======================================================== -->
-		{% endblock %}
-	</head>
-
-	<body>
-
-		<!-- ======= Header ======= -->
-		<header id="header" class="header fixed-top d-flex align-items-center">
-
-			<div class="d-flex align-items-center justify-content-between">
-				<span class="logo d-flex align-items-center">
-					<img src="{{asset('Back/img/elbaldi.jpg ')}}" alt="">
-
-
-					<span style="color: #000000;" class="d-none d-lg-block">Elbaldi</span>
-				</span>
-				<i class="bi bi-list toggle-sidebar-btn"></i>
-			</div>
-			<!-- End Logo -->
-
-			<div class="search-bar">
-				<form class="search-form d-flex align-items-center" method="POST" action="#">
-					<input type="text" name="query" placeholder="Search" title="Enter search keyword">
-					<button type="submit" title="Search">
-						<i class="bi bi-search"></i>
-					</button>
-				</form>
-			</div>
-			<!-- End Search Bar -->
-
-			<nav class="header-nav ms-auto">
-				<ul class="d-flex align-items-center">
-
-					<li class="nav-item d-block d-lg-none">
-						<a class="nav-link nav-icon search-bar-toggle " href="#">
-							<i class="bi bi-search"></i>
-						</a>
-					</li>
-					<!-- End Search Icon-->
-
-
-					<li class="nav-item dropdown pe-3">
-
-						<a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-							<img src="{{asset('Back/img/user.png')}}" alt="profile" class="rounded-circle">
-							<span style="color: #000000;" class="d-none d-md-block dropdown-toggle ps-2">
-								Admin
-							</span>
-						</a>
-						<!-- End profile Iamge Icon -->
-
-						<ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-							<li class="dropdown-header">
-								<h6 >Admin</h6>
-
-							</li>
-							<li>
-								<hr class="dropdown-divider">
-							</li>
-
-							<li>
-								<a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-									<i class="bi bi-person-fill"></i>
-									<span>
-										Profil</span>
-								</a>
-							</li>
-							<li>
-								<hr class="dropdown-divider">
-							</li>
-
-							<li>
-								<a class="dropdown-item d-flex align-items-center" data-bs-toggle="acceuil-nav" href="#">
-									<i class="bi bi-people-fill"></i>
-									<span>Gestion utilisateurs</span>
-								</a>
-							</li>
-
-							<li>
-								<hr class="dropdown-divider">
-							</li>
-
-							<li>
-								<a class="dropdown-item d-flex align-items-center" data-bs-toggle="acceuil-nav" href="#">
-									<i class="bi bi-box-arrow-right"></i>
-									<span>Déconnexion</span>
-								</a>
-							</li>
-
-
-						</ul>
-						<!-- End profile Dropdown Items -->
-					</li>
-					<!-- End profile Nav -->
-
-				</ul>
-			</nav>
-			<!-- End Icons Navigation -->
-
-		</header>
-		<!-- End Header -->
-
-		<!-- ======= Sidebar ======= -->
-		<aside id="sidebar" class="sidebar">
-
-			<ul class="sidebar-nav" id="sidebar-nav">
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_produit_stats2')}}">
-						<i style="color: #000000;" class="bi bi-house-door-fill"></i>
-						<span>Acceuil</span>
-					</a>
-				</li>
-				<!-- End Dashboard Nav -->
-
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="produit-nav" href="{{path('app_produit_index')}}">
-						<i style="color: #000000;" class="bi bi-shop"></i>
-						<span>Produits</span>
-					</a>
-				</li>
-
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="{{path('app_categorie_index')}} ">
-						<i style="color: #000000;" class="bi bi-boxes"></i>
-						<span>catégories</span>
-					</a>
-				</li>
-				<!-- End Dashboard Nav -->
-
-				<!-- End Produits Nav -->
-
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
-						<i style="color: #000000;" class="bi bi-box"></i>
-						<span>Commandes</span>
-					</a>
-				</li>
-				<!-- End Dashboard Nav -->
-
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed " data-bs-toggle="acceuil-nav" href="quiz.html.twig" ">
-						<i style="color: #000000;" class="bi bi-truck"></i>
-						<span>Livraison</span>
-					</a>
-				</li>
-				<!-- End Dashboard Nav -->
-
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-target="#bonplan-nav" data-bs-toggle="collapse" href="#">
-						<i style="color: #000000;" class="bi bi-geo-alt"></i>
-						<span>Bon plans</span>
-
-					</a>
-					<!-- End Bonplan Nav -->
-				</li>
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-target="#quiz-nav" data-bs-toggle="collapse" href="#quiz.html">
-						<i style="color: #000000;" class="bi bi-question-octagon"></i>
-						<span>Quiz</span>
-
-					</a>
-					<!-- End Quiz Nav -->
-				</li>
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-target="#evenement-nav" data-bs-toggle="collapse" href="#">
-						<i style="color: #000000;" class="bi bi-calendar2-event"></i>
-						<span>Evènements</span>
-
-					</a>
-					<!-- End evenement Nav -->
-				</li>
-
-				<li class="nav-item">
-					<a style="background-color:  #9a000a;" class="nav-link collapsed" data-bs-target="#participation-nav" data-bs-toggle="collapse" href="#">
-						<i style="color: #000000;" class="bi bi-boombox-fill"></i>
-						<span>Participations</span>
-
-					</a>
-					<!-- End participations Nav -->
-				</li>
-
-
-			</ul>
-		</body>
-	</body>
-</html></aside><!-- End Sidebar--><main
-id="main" class="main">
-
-
-<!-- End Page Title -->
-
-
-<section class="section Acceuil">
-	{% block body %}
+{% extends 'baseBack.html.twig' %}
+{% block body %}
 		<div
 			class="row">
 
@@ -1145,4 +900,4 @@ name: 'Video Ads'
 <script src="{{asset('Back/vendor/php-email-form/validate.js')}}"></script>
 
 <!-- Template Main JS File -->
-<script src="{{asset('Back/js/main.js')}}"></script>{% endblock %}</body></html>
+<script src="{{asset('Back/js/main.js')}}"></script>{% endblock %}
