--- a/templates/produitFront/produitDetails.html.twig
+++ b/templates/produitFront/produitDetails.html.twig
@@ -1,4 +1,58 @@
-{% extends 'baseFront.html.twig' %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>{% block title %} Sailor Bootstrap Template - Index{% endblock %}</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Favicons -->
+  <link href="{{asset('Front/img/favicon.png')}}" rel="icon">
+  <link href="{{asset('Front/img/apple-touch-icon.png ')}}" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+{% block css%}
+  <!-- Vendor CSS Files -->
+  <link href="{{asset('Front/vendor/animate.css/animate.min.css ')}}" rel="stylesheet">
+  <link href="{{asset('Front/vendor/bootstrap/css/bootstrap.min.css ')}}" rel="stylesheet">
+  <link href="{{asset('Front/vendor/bootstrap-icons/bootstrap-icons.css ')}}" rel="stylesheet">
+  <link href="{{asset('Front/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
+  <link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
+  <link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
+  <link href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="{{asset('Front/css/style.css')}}" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Sailor
+  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+{% endblock %}
+</head>
+
+
+{% block js%}
+  <!-- Vendor JS Files -->
+  <script src="{{asset('Front/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+  <script src="{{asset('Front/vendor/glightbox/js/glightbox.min.js')}}"></script>
+  <script src="{{asset('Front/vendor/isotope-layout/isotope.pkgd.min.js')}}"></script>
+  <script src="{{asset('Front/vendor/swiper/swiper-bundle.min.js')}}"></script>
+  <script src="{{asset('Front/vendor/waypoints/noframework.waypoints.js')}}"></script>
+  <script src="{{asset('Front/vendor/php-email-form/validate.js')}}"></script>
+
+  <!-- Template Main JS File -->
+  <script src="{{asset('Front/js/main.js')}}"></script>
+{% endblock %}
+ 
+
 
 {% block body %}
     <section id="portfolio-details" class="portfolio-details">
@@ -36,36 +90,35 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="portfolio-comments">
-                        <h2>Commentaires</h2>
-                        {% if produit.commentaires is not empty %}
-                            {% for commentaire in produit.commentaires %}
-                                <div class="comment">
-                                    <div class="comment-info">
-                                        <strong>{{ commentaire.user.nom }}</strong> - {{ commentaire.date_comm|date('d/m/Y H:i') }}
-                                    </div>
-                                    <div class="comment-text">
-                                        {{ commentaire.commentaire }}
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        {% else %}
-                            <p>Aucun commentaire pour le moment.</p>
-                        {% endif %}
-                        <hr>
-                        <h3>Ajouter un commentaire</h3>
-                        <form action="{{ path('app_commentaire_new', {'ref_produit': produit.ref_produit}) }}" method="POST">
-                            <div class="form-group">
-                                <label for="commentaire">Commentaire</label>
-                                <textarea name="commentaire" id="commentaire" rows="3" class="form-control"></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Ajouter</button>
-                        </form>
+           <div class="row">
+    <div class="col-lg-12">
+        <div class="portfolio-comments">
+            <h2>Commentaires</h2>
+            {% if commentaires is not empty %}
+                {% for commentaire in commentaires %}
+                    <div class="comment">
+                        <div class="comment-info">
+                            <strong>{{ commentaire.user.nom }}</strong> - {{ commentaire.date_comm|date('d/m/Y') }}
+                        </div>
+                        <div class="comment-text">
+                            {{ commentaire.contenu }}
+                        </div>
                     </div>
-                </div>
-            </div>
+                {% endfor %}
+            {% else %}
+                <p>Aucun commentaire pour le moment.</p>
+            {% endif %}
+            <hr>
+            <h3>Ajouter un commentaire</h3>
+            <form method="POST" action="{{ path('add_comment', {'ref_produit': produit.ref_produit}) }}">
+    <label for="contenu">Contenu</label>
+    <input type="text" id="contenu" name="contenu">
+    <button type="submit">Envoyer</button>
+</form>
+        </div>
+    </div>
+</div>
+
         </div>
     </section>
 {% endblock %}
