--- a/templates/baseFront.html.twig
+++ b/templates/baseFront.html.twig
@@ -28,21 +28,20 @@
 			<link href="{{asset('Front/vendor/boxicons/css/boxicons.min.css ')}}" rel="stylesheet">
 			<link href="{{asset('Front/vendor/glightbox/css/glightbox.min.css ')}}" rel="stylesheet">
 			<link href="{{asset('Front/vendor/remixicon/remixicon.css ')}}" rel="stylesheet">
-			<link href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
 			<link
-			href="{{asset('Front/vendor/hous/panier.css ')}}" rel="stylesheet">
+			href="{{asset('Front/vendor/swiper/swiper-bundle.min.css ')}}" rel="stylesheet">
 
 			<!-- Template Main CSS File -->
 			<link
 			href="{{asset('Front/css/style.css')}}" rel="stylesheet">
 
 		<!-- =======================================================
-																														  * Template Name: Sailor
-																														  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-																														  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
-																														  * Author: BootstrapMade.com
-																														  * License: https://bootstrapmade.com/license/
-																														  ======================================================== -->
+																				  * Template Name: Sailor
+																				  * Updated: Mar 10 2023 with Bootstrap v5.2.3
+																				  * Template URL: https://bootstrapmade.com/sailor-free-bootstrap-theme/
+																				  * Author: BootstrapMade.com
+																				  * License: https://bootstrapmade.com/license/
+																				  ======================================================== -->
 		{% endblock %}
 		<style>
 			.logo {
@@ -97,7 +96,7 @@
 							<a href="portfolio.html">Evènements</a>
 						</li>
 						<li>
-							<a href="{{path('app_quiz_indexc')}}">Quiz</a>
+							<a href="pricing.html">Quiz</a>
 						</li>
 
 						<li>
@@ -298,96 +297,107 @@
 		</div>
 
 	</div>
-{% endblock %}</section><!-- End Portfolio Section --></main><!-- End #main -->{% endblock %}<!-- ======= Footer ======= --><footer id="footer"><div class="footer-top"><div class="container">
-<div class="row">
+{% endblock %}</section><!-- End Portfolio Section --></main><!-- End #main --><!-- ======= Footer ======= --><footer id="footer"><div class="footer-top">
+<div class="container">
+	<div class="row">
 
-	<div class="col-lg-3 col-md-6">
-		<div class="footer-info">
-			<h3>Elbaldi</h3>
+		<div class="col-lg-3 col-md-6">
+			<div class="footer-info">
+				<h3>Elbaldi</h3>
 
-			<strong>Phone:</strong>
-			+216 72 569 483<br>
-			<strong>Email:</strong>
-			Elbaldi@gmail.tn<br>
-		</p>
+				<strong>Phone:</strong>
+				+216 72 569 483<br>
+				<strong>Email:</strong>
+				Elbaldi@gmail.tn<br>
+			</p>
 
-		<div class="social-links mt-3">
-			<a href="#" class="twitter">
-				<i class="bx bxl-twitter"></i>
-			</a>
-			<a href="#" class="facebook">
-				<i class="bx bxl-facebook"></i>
-			</a>
-			<a href="#" class="instagram">
-				<i class="bx bxl-instagram"></i>
-			</a>
-			<a href="#" class="google-plus">
-				<i class="bx bxl-skype"></i>
-			</a>
-			<a href="#" class="linkedin">
-				<i class="bx bxl-linkedin"></i>
-			</a>
+			<div class="social-links mt-3">
+				<a href="#" class="twitter">
+					<i class="bx bxl-twitter"></i>
+				</a>
+				<a href="#" class="facebook">
+					<i class="bx bxl-facebook"></i>
+				</a>
+				<a href="#" class="instagram">
+					<i class="bx bxl-instagram"></i>
+				</a>
+				<a href="#" class="google-plus">
+					<i class="bx bxl-skype"></i>
+				</a>
+				<a href="#" class="linkedin">
+					<i class="bx bxl-linkedin"></i>
+				</a>
+			</div>
 		</div>
 	</div>
-</div>
 
-<div class="col-lg-2 col-md-6 footer-links">
-	<h4>Liens utils</h4>
-	<ul>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Profil</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="{{path('app_produit_indexFront')}}">Produits
-			</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Bons plans</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Evènements</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Quiz</a>
-		</li>
-	</ul>
-</div>
+	<div class="col-lg-2 col-md-6 footer-links">
+		<h4>Liens utils</h4>
+		<ul>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Profil</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="{{path('app_produit_indexFront')}}">Produits
+				</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Bons plans</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Evènements</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Quiz</a>
+			</li>
+		</ul>
+	</div>
 
-<div class="col-lg-3 col-md-6 footer-links">
-	<h4>Nos Services</h4>
-	<ul>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Vente en ligne</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="{{path('app_produit_indexFront')}}">Produits locaux de haute qualité</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Livraison à domicile</a>
-		</li>
-		<li>
-			<i class="bx bx-chevron-right"></i>
-			<a href="#">Événements promotionnels</a>
-		</li>
+	<div class="col-lg-3 col-md-6 footer-links">
+		<h4>Nos Services</h4>
+		<ul>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Vente en ligne</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="{{path('app_produit_indexFront')}}">Produits locaux de haute qualité</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Livraison à domicile</a>
+			</li>
+			<li>
+				<i class="bx bx-chevron-right"></i>
+				<a href="#">Événements promotionnels</a>
+			</li>
 
-	</ul>
-</div>
+		</ul>
+	</div>
 
-<div class="col-lg-4 col-md-6 footer-newsletter">
-	<h4>Our Newsletter</h4>
-	<p></p>
-	<form action="" method="post">
-		<input type="email" name="email"><input type="submit" value="Subscribe">
-	</form>
+	<div class="col-lg-4 col-md-6 footer-newsletter">
+		<h4>Our Newsletter</h4>
+		<p></p>
+		<form action="" method="post">
+			<input type="email" name="email"><input type="submit" value="Subscribe">
+		</form>
 
-</div></div></div></div><div class="container"><div class="copyright">&copy; Copyright<strong>
-<span>Elbaldi</span></strong>. All Rights Reserved</div><div class="credits"><!-- All the links in the footer should remain intact. --><!-- You can delete the links only if you purchased the pro version. --><!-- Licensing information: https://bootstrapmade.com/license/ --><!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->Designed by
-<a href="https://bootstrapmade.com/"> BootstrapMade</a></div></div></body></html></footer><!-- End Footer --><a href="#" class="back-to-top d-flex align-items-center justify-content-center">{% block js%}<!-- Vendor JS Files --><script src="{{asset('Front/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script><script src="{{asset('Front/vendor/glightbox/js/glightbox.min.js')}}"></script><script src="{{asset('Front/vendor/isotope-layout/isotope.pkgd.min.js')}}"></script><script src="{{asset('Front/vendor/swiper/swiper-bundle.min.js')}}"></script><script src="{{asset('Front/vendor/waypoints/noframework.waypoints.js')}}"></script><script src="{{asset('Front/vendor/php-email-form/validate.js')}}"></script><!-- Template Main JS File --><script src="{{asset('Front/js/main.js')}}"></script>{% endblock %}</body></html>
+	</div>
+
+</div></div></div><div class="container"><div class="copyright">
+&copy; Copyright
+<strong>
+	<span>Elbaldi</span>
+</strong>. All Rights Reserved</div><div class="credits">
+<!-- All the links in the footer should remain intact. -->
+<!-- You can delete the links only if you purchased the pro version. -->
+<!-- Licensing information: https://bootstrapmade.com/license/ -->
+<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
+Designed by
+	<a href="https://bootstrapmade.com/"> BootstrapMade</a></div></div></body></html></footer><!-- End Footer --><a href="#" class="back-to-top d-flex align-items-center justify-content-center">{% block js%}<!-- Vendor JS Files --><script src="{{asset('Front/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script><script src="{{asset('Front/vendor/glightbox/js/glightbox.min.js')}}"></script><script src="{{asset('Front/vendor/isotope-layout/isotope.pkgd.min.js')}}"></script><script src="{{asset('Front/vendor/swiper/swiper-bundle.min.js')}}"></script><script src="{{asset('Front/vendor/waypoints/noframework.waypoints.js')}}"></script><script src="{{asset('Front/vendor/php-email-form/validate.js')}}"></script><!-- Template Main JS File --><script src="{{asset('Front/js/main.js')}}"></script>{% endblock %}</body></html>
